@@ -1,5 +1,8 @@
 2008-04-10  Sancho Lerena <slerena@artica.es>
 
+	* godmode/agentes/configurar_agente.php: Fixe problem with server
+	assigment in creation mode.
+
 	* godmode/agentes/alert_manager.php, godmode/agentes/configurar_agente.php,
 	godmode/agentes/alert_manager_editor.php: Fixed problem with combined alert
 	editor. Tested and works fine for me.
